registrations and minor styling

--- a/gifts/templates/gifts/index.html
+++ b/gifts/templates/gifts/index.html
@@ -1,1 +1,8 @@
-<h1>HELLO</h1>
+{% extends 'gifts/base.html'%}
+
+{% block title %} Gifty Groups {% endblock %}
+
+
+{% block content %}
+<h1>Home</h1>
+{% endblock %}
