--- a/uac/templates/register/register.html
+++ b/uac/templates/register/register.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="offset-md-2 col-md-8">
-            <form method="POST" class="form-group" style="padding:35px 0px;">
+            <form method="POST" class="form-group">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-md">
