--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -8,8 +8,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Groups</a>
+            <li class="nav-item {% if page_name == 'groups' %}active{%endif%}">
+                <a class="nav-link" href="{% url 'view_groups' %}">Groups</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Gifts</a>
