--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -14,6 +14,22 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/85d8264e0b.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+        .site-green {
+            color: #71dc5e;
+        }
+
+        .site-purple {
+            color: #7d55b1
+        }
+
+        .site-blue {
+            color: #9abae7;
+        }
+    </style>
+
 </head>
 
 <body style="background: rgb(238,174,202); background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1)
