--- a/gifts/templates/gifts/create_group.html
+++ b/gifts/templates/gifts/create_group.html
@@ -6,10 +6,18 @@
 {% block content %}
 <h1>Create Group</h1>
 
-<form method="POST" class="form-group offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-sm-2 col-sm-8">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Create Group</button>
-</form>
+<div class="row">
+    <div class="col s12 offset-m2 m8 offset-l3 l6 blue-grey lighten-5">
+        <div class="col-content">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <div class="center">
+                    <button type="submit" class="btn">Create Group</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
