--- a/gifts/templates/gifts/view_individual_group.html
+++ b/gifts/templates/gifts/view_individual_group.html
@@ -4,25 +4,44 @@
 
 <h1>{{group.name}}</h1>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Admin</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for member in members %}
-        <td>{{member.user.first_name}}
-        <td>{{member.user.last_name}}</td>
-        <td>{% if member.is_admin %}<i class="fas fa-check-square site-green" style="font-size:20px"></i>{% else %} <a
-                href="{% url 'group_grant_admin' group_id=group.id profile_id=member.id %}"><i
-                    class="fas fa-plus-square site-purple"></i></a>{% endif %}
-        </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="row">
+    <div class="col s12 offset-m2 m8 l7">
+        <p>Members</p>
+        <ul class="collection">
+            {% for member in members %}
+            <li class="collection-item avatar">
+                <i class="material-icons circle">folder</i>
+                <span class="title">{{member.user.first_name}} {{member.user.last_name}}</span>
+                <p>First Line</p>
+                {% if member.is_admin %}<i class="material-icons secondary-content yellow-text">verified</i>
+                {% elif user_is_admin %}
+                <a href="{% url 'group_grant_admin' group_id=group.id profile_id=member.id %}">
+                    <i class="material-icons secondary-content green-text">add_circle</i>
+                </a>
+                {% else %}
+                <i class="material-icons secondary-content teal-text">account_circle</i>
+                {% endif %}
+
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+
+    <div class="col s12 offset-m2 m8 l5">
+        <p>Gifts</p>
+        <ul class="collection">
+            {% for member in members %}
+            <li class="collection-item avatar">
+                <i class="material-icons circle">recycle</i>
+                <span class="title"></span>
+                <p></p>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+
+
+
+</div>
 
 {% endblock %}
