context processor and invitation model

--- a/uac/templates/registration/login.html
+++ b/uac/templates/registration/login.html
@@ -17,7 +17,7 @@ Login Here
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="center">
-                    <button type="submit" class="btn">Create Account</button>
+                    <button type="submit" class="btn">Log in</button>
                 </div>
             </form>
         </div>
