--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -5,7 +5,10 @@
         <ul class="left hide-on-med-and-down">
             <li><a href="{% url 'view_groups' %}">Groups</a></li>
             <li><a href="#">Gifts</a></li>
-            <li><a href="#">Something</a></li>
+            {% if gift_group_invitations.count > 0 %}
+            <li><a href="#">Invitations <span class="new badge">{{gift_group_invitations.count}}</span></a></li>
+            {% endif %}
+
         </ul>
         <ul class="right hide-on-med-and-down">
             {% if user.is_authenticated %}
@@ -22,6 +25,9 @@
     {% if not user.is_authenticated %}
     <li><a href="{% url 'register' %}">Sign up</a></li>
     <li><a href="{% url 'login' %}">Log in</a></li>
+    {% endif %}
+    {% if gift_group_invitations.count > 0 %}
+    <li><a href="#">Invitations <span class="new badge">{{gift_group_invitations.count}}</span></a></li>
     {% endif %}
     <li><a href="{% url 'view_groups' %}">Groups</a></li>
     <li><a href="Gifts">Gifts</a></li>
