--- a/gifts/templates/gifts/view_individual_group.html
+++ b/gifts/templates/gifts/view_individual_group.html
@@ -4,6 +4,8 @@
 
 <h1>{{group.name}}</h1>
 
+<a href="{% url 'leave_group' group.id %}"><button class="btn red">Leave group</button></a>
+
 <div class="row">
     <div class="col s12 offset-m2 m8 l7">
         <p>Members</p>
@@ -11,11 +13,11 @@
             {% for member in members %}
             <li class="collection-item avatar">
                 <i class="material-icons circle">folder</i>
-                <span class="title">{{member.user.first_name}} {{member.user.last_name}}</span>
+                <span class="title">{{member.first_name}} {{member.last_name}}</span>
                 <p>First Line</p>
                 {% if member.is_admin %}<i class="material-icons secondary-content yellow-text">verified</i>
                 {% elif user_is_admin %}
-                <a href="{% url 'group_grant_admin' group_id=group.id profile_id=member.id %}">
+                <a href="{% url 'group_grant_admin' group_id=group.id user_id=member.id %}">
                     <i class="material-icons secondary-content green-text">add_circle</i>
                 </a>
                 {% else %}
@@ -25,6 +27,13 @@
             </li>
             {% endfor %}
         </ul>
+        {% if group.standard_user_can_invite or user_is_admin %}
+        <form method="POST">
+            {% csrf_token %}
+            {{invitation_form.invitee_email}}
+            <button class="btn green">Invite</button>
+        </form>
+        {% endif %}
     </div>
 
     <div class="col s12 offset-m2 m8 l5">
