--- a/gifts/templates/gifts/edit_group.html
+++ b/gifts/templates/gifts/edit_group.html
@@ -8,7 +8,11 @@
 
 <form method="POST" class="form-group offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-sm-2 col-sm-8">
     {% csrf_token %}
-    {{ form|crispy }}
+    {{form.name}}
+    <label>
+        {{form.standard_user_can_invite}}
+        <span>Standard User can invite</span>
+    </label>
     <button type="submit" class="btn btn-success">Save Changes</button>
 </form>
 
