--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -36,6 +36,7 @@
 
     <ul class="right hide-on-med-and-down">
       {% if user.is_authenticated %}
+      <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
       <li><a href="{% url 'logout' %}">Logout</a></li>
       {% else %}
       <li><a href="{% url 'register' %}">Sign up</a></li>
