set up static files

--- a/gifts/templates/gifts/edit_profile.html
+++ b/gifts/templates/gifts/edit_profile.html
@@ -1,6 +1,6 @@
 {% extends 'gifts/base.html'%}
 
-{% block title %} Gifty Groups - Edit Profile {% endblock %}
+{% block title %} Giftly Groups - Edit Profile {% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
