--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!doctype html>
 
 <head>
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'gifts/main.css' %}">
+    {% block head_links %} {% endblock %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
