--- a/gifts/templates/gifts/edit_group.html
+++ b/gifts/templates/gifts/edit_group.html
@@ -1,6 +1,6 @@
 {% extends 'gifts/base.html'%}
 
-{% block title %} Gifty Groups - Create Group {% endblock %}
+{% block title %} Giftly Groups - Create Group {% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
