--- a/gifts/templates/gifts/header.html
+++ b/gifts/templates/gifts/header.html
@@ -1,5 +1,6 @@
-<!-- Invitation Dropdowns -->
+{% load static %}
 
+<!-- Invitation Dropdowns -->
 <ul id="inviteDropdown" class="dropdown-content">
   {% for invitation in gift_group_invitations %}
   <li>
@@ -17,36 +18,38 @@
 </ul>
 
 <!-- End Invitation Dropdowns -->
+<div class="navbar-fixed">
+  <nav class="grey darken-2">
+    <div class="nav-wrapper">
+      <a href="{% url 'index' %}" class="brand-logo center">
+        Giftly Groups</a>
+      <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="left hide-on-med-and-down">
+        <li><a href="{% url 'view_groups' %}">Groups</a></li>
+        <li><a href="#">Gifts</a></li>
+        {% if gift_group_invitations.count > 0 %}
+        <li>
+          <a class="dropdown-trigger" href="#!" data-target="inviteDropdown">Invitations<i
+              class="material-icons right">arrow_drop_down</i>
+            <span class="new badge">{{gift_group_invitations.count}}</span></a>
+        </li>
+        {% endif %}
+      </ul>
 
-<nav class="grey darken-2">
-  <div class="nav-wrapper">
-    <a href="{% url 'index' %}" class="brand-logo center">Giftly Groups</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <ul class="left hide-on-med-and-down">
-      <li><a href="{% url 'view_groups' %}">Groups</a></li>
-      <li><a href="#">Gifts</a></li>
-      {% if gift_group_invitations.count > 0 %}
-      <li>
-        <a class="dropdown-trigger" href="#!" data-target="inviteDropdown">Invitations<i
-            class="material-icons right">arrow_drop_down</i>
-          <span class="new badge">{{gift_group_invitations.count}}</span></a>
-      </li>
-      {% endif %}
-    </ul>
+      <ul class="right hide-on-med-and-down">
+        {% if user.is_authenticated %}
+        <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'register' %}">Sign up</a></li>
+        <li><a href="{% url 'login' %}">Log in</a></li>
+        {% endif %}
+      </ul>
+    </div>
+  </nav>
+</div>
 
-    <ul class="right hide-on-med-and-down">
-      {% if user.is_authenticated %}
-      <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
-      <li><a href="{% url 'logout' %}">Logout</a></li>
-      {% else %}
-      <li><a href="{% url 'register' %}">Sign up</a></li>
-      <li><a href="{% url 'login' %}">Log in</a></li>
-      {% endif %}
-    </ul>
-  </div>
-</nav>
-
-<ul class="sidenav" id="mobile-demo">
+<ul class="sidenav" id="mobile-nav">
   {% if not user.is_authenticated %}
   <li><a href="{% url 'register' %}">Sign up</a></li>
   <li><a href="{% url 'login' %}">Log in</a></li>
@@ -63,9 +66,3 @@
   <li><a href="{% url 'logout' %}">Logout</a></li>
   {% endif %}
 </ul>
-
-<style>
-  nav {
-    margin-bottom: 30px;
-  }
-</style>
