--- a/gifts/templates/gifts/view_groups.html
+++ b/gifts/templates/gifts/view_groups.html
@@ -36,34 +36,37 @@
 
 <h1>Your Groups</h1>
 
-<div class="row">
-    {% for group in groups %}
-    <div class="col offset-s2 s8 offset-m1 m5 l4">
-        <a href="{% url 'view_individual_group' group.id %}" class="card-anchor">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-icon-container"><i class="fas fa-users card-icon site-purple"></i></div>
-                    <h5 class="card-title" style="white-space: nowrap;">{{group.name}}</h5>
-                    <small style="position: absolute" class="card-text">{{group.members_total}}
-                        member{% if group.members_total > 1 %}s{% endif %}</small>
-                </div>
-            </div>
-        </a>
-    </div>
-    {% endfor %}
+<div class="content container">
 
-    <div class="col offset-s2 s8 offset-m1 m5 l4">
-        <a href="{% url 'new_group' %}" class="card-anchor">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-icon-container">
-                        <i class="fas fa-plus card-icon site-green"></i>
+    <div class="row">
+        {% for group in groups %}
+        <div class="col offset-s2 s8 offset-m1 m5 l4">
+            <a href="{% url 'view_individual_group' group.id %}" class="card-anchor">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-icon-container"><i class="fas fa-users card-icon site-purple"></i></div>
+                        <h5 class="card-title" style="white-space: nowrap;">{{group.name}}</h5>
+                        <small style="position: absolute" class="card-text">{{group.members_total}}
+                            member{% if group.members_total > 1 %}s{% endif %}</small>
                     </div>
-                    <h5 class="card-title">New Group</h5>
                 </div>
-            </div>
+            </a>
+        </div>
+        {% endfor %}
+
+        <div class="col offset-s2 s8 offset-m1 m5 l4">
+            <a href="{% url 'new_group' %}" class="card-anchor">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-icon-container">
+                            <i class="fas fa-plus card-icon site-green"></i>
+                        </div>
+                        <h5 class="card-title">New Group</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
-    </a>
 </div>
 
 {% endblock %}
