--- a/uac/templates/registration/login.html
+++ b/uac/templates/registration/login.html
@@ -10,7 +10,7 @@ Login Here
 
 {% block content %}
 
-<div class="row">
+<div class="row nav-margin footer-margin">
     <div class="col s12 offset-m2 m8 offset-l3 l6 blue-grey lighten-5">
         <div class="col-content">
             <form method="POST">
