--- a/gifts/templates/gifts/edit_profile.html
+++ b/gifts/templates/gifts/edit_profile.html
@@ -4,23 +4,25 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>Edit Profile</h1>
+<div class="containt container footer-margin">
+    <h1>Edit Profile</h1>
 
-<div class="row">
-    <div class="col s12 offset-m2 m8 offset-l3 l6 blue-grey lighten-5">
-        <div class="col-content">
-            <form method="POST" class="form-group offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-sm-2 col-sm-8">
-                {% csrf_token %}
-                {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                    <li class="{{ message.tags }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
-                {% endif %}
-                {{form}}
-                <button type="submit" class="btn btn-success">Save Changes</button>
-            </form>
+    <div class="row">
+        <div class="col s12 offset-m2 m8 offset-l3 l6 blue-grey lighten-5">
+            <div class="col-content">
+                <form method="POST" class="form-group offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-sm-2 col-sm-8">
+                    {% csrf_token %}
+                    {% if messages %}
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li class="{{ message.tags }}">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    {{form}}
+                    <button type="submit" class="btn btn-success">Save Changes</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
