--- a/uac/templates/register/register.html
+++ b/uac/templates/register/register.html
@@ -6,7 +6,7 @@
 {% load crispy_forms_tags %}
 
 
-<div class="row">
+<div class="row nav-margin footer-margin">
     <div class="col s12 offset-m2 m8 offset-l3 l6 blue-grey lighten-5">
         <div class="col-content">
             <form method="POST">
